syntax = "proto3";
package euc_backend;


import "club/club.proto";

message ClubReply {
  int32 status_code = 1;
  string message = 2;
  optional string error_code = 3;
  optional Club payload = 4;
}

message ClubListDataReply {
  repeated Club club_list = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message ClubListReply {
  int32 status_code = 1;
  string message = 2;
  optional string error_code = 3;
  ClubListDataReply payload = 4;
}
